# fanDownload

./: .gitignore  Cargo.toml  README.md  app.py  test_app.py  test_naming.py  test_pagination.py
.github/workflows/: release.yml
src/: anime.rs  download.rs  lib.rs  main.rs  model.rs  progress_ui.rs  selection.rs
tests/: downloads.rs  parsing.rs  progress_ui.rs  selection.rs
