[package]
name = "fan_download"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
futures = "0.3"
urlencoding = "2"
url = "2"

[dev-dependencies]
tempfile = "3"
